fix issue 1922 - working with images of any size.
* Zooming working.
* Images that are too large are resized to fit the screen.
* JQuery was added in order to do this.
* Thanks to Moin Zaman's solution! (http://stackoverflow.com/a/3971875)

--- a/assets/flashcard.css
+++ b/assets/flashcard.css
@@ -12,11 +12,6 @@ body.night_mode {
   margin: 0.5em;
 }
 
-img {
-  max-width: 100%;
-  max-height: 100%;
-}
-
 .vertically_centered {
   position: absolute;
   width: 100%;
